Fix PR preview (#461)
* test

* Fix PR preview deployment

* Update .github/workflows/preview-build.yml

--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -78,7 +78,7 @@ jobs:
         id: metadata
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
-          REF: ${{ github.sha }}
+          REF: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
           SHOULD_DEPLOY: ${{ github.event_name == 'pull_request' && steps.check-files.outputs.any_changed || 'true' }}
         run: |
           cat << EOF > deployment_metadata.json
