--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -37,7 +37,7 @@ permissions:
 jobs:
   build:
     concurrency: 
-      group: ${{ github.workflow }}-${{ github.ref }}
+      group: ${{ github.workflow }}-${{ github.event.pull_request.head.sha || github.ref }}
       cancel-in-progress: ${{ github.event_name == 'pull_request_target' }}
     runs-on: ubuntu-latest
     steps:
