--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -53,6 +53,7 @@ jobs:
         if: github.event_name == 'push' || steps.check-files.outputs.any_changed == 'true'
         uses: actions/checkout@v4
         with: 
+          repository: '${{ github.event.pull_request.head.repo.full_name || github.repository }}'
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
           persist-credentials: false
         
