update contributing on the web docs (#474)
* update contributing on the web docs

* updates to bookmarks

* Update docset.yml

* Update on-the-web.md

* Update on-the-web.md

---------

Co-authored-by: Martijn Laarman <Mpdreamz@gmail.com>

--- a/docs/docset.yml
+++ b/docs/docset.yml
@@ -20,6 +20,8 @@ external_hosts:
   - commonmark.org
   - github.io
   - github.com
+  - pandoc.org
+  - atlassian.net
   - elastic.dev
   - visualstudio.com
 exclude:
