--- a/tests/authoring/authoring.fsproj
+++ b/tests/authoring/authoring.fsproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -58,6 +58,11 @@
     <Compile Include="Blocks\CodeBlocks\CodeBlocks.fs"/>
     <Compile Include="Blocks\Lists.fs"/>
     <Compile Include="Blocks\Admonitions.fs"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Applicability\AppliesToFrontMatter.fs" />
+    <Compile Include="Applicability\AppliesToDirective.fs" />
   </ItemGroup>
 
 </Project>
