Add layout system and NotFound layout (#676)
* Add layout system and NotFound layout

* Assign location

* Rename

* Use kebab-case for enum values

* Update docs/index.md

--- a/docs/_docset.yml
+++ b/docs/_docset.yml
@@ -11,11 +11,11 @@ subs:
   eck:   "Elastic Cloud on Kubernetes"
   
 features:
-  primary-nav: false
-  landing-page: false
-
+  primary-nav: true
+  
 toc:
   - file: index.md
+  - hidden: 404.md
   - hidden: developer-notes.md
   - folder: contribute
     children:
