Assembler: Inject global navigation into the build (#822)
* stage

* stage

* stage

* stage

* stage

* stage

* fix output path bug

* use url resolver for markdown urls

* render reference

* post merge build fixes

* toggle js a bit

* Add temporary TocReferences in navigation even if toc.yml does not exist

* fix duplicate reference output

* HTML templates keep track of their own depth

* Fix sitenav rendering with help of @reakaleek

* Tests require checkout folder, skipping for now

* attempt windows test failure

--- a/src/docs-assembler/assembler.yml
+++ b/src/docs-assembler/assembler.yml
@@ -17,35 +17,26 @@ environments:
 narrative:
   checkout_strategy: full
 references:
-  #TODO TEMPORARY REMOVE
-  asciidocalypse:
-    skip: true
+  apm-server:
   apm-agent-android:
   apm-agent-dotnet:
   apm-agent-go:
   apm-agent-ios:
   apm-agent-java:
   apm-agent-nodejs:
-    skip: true
   apm-agent-php:
-    skip: true
   apm-agent-python:
-    skip: true
   apm-agent-ruby:
-    skip: true
   apm-agent-rum-js:
-    skip: true
   apm-aws-lambda:
   apm-k8s-attacher:
   beats:
-    skip: true
   cloud-on-k8s:
   cloud:
     current: master
-    skip: true
   curator:
-    current: master
     skip: true
+    current: master
   ecctl:
     current: master
     skip: true
@@ -60,19 +51,16 @@ references:
   ecs-logging-ruby:
   ecs-logging:
   ecs:
-    skip: true
   eland:
   elastic-serverless-forwarder:
   elasticsearch-hadoop:
   elasticsearch-java:
   elasticsearch-js:
   elasticsearch-net:
-    # failures on main https://github.com/elastic/elasticsearch-net/actions/runs/13594875271/job/38009389173
-    skip: true
   elasticsearch-php:
   elasticsearch-py:
+    # https://github.com/elastic/elasticsearch-rs ci checks not running?
   elasticsearch-rs:
-    # needs a dummy PR to docs
     skip: true
   elasticsearch-ruby:
   elasticsearch:
@@ -82,10 +70,8 @@ references:
   logstash-docs:
     skip: true
   logstash:
-    skip: true
   search-ui:
   integration-docs:
-    skip: true
   security-docs:
     # wait for move to https://github.com/elastic/detection-rules/pull/4507/files
     skip: true
