Update `navigation.yml` (#780)
* add code comments with context

* address feedback from @lcawl @bmorelli25 in https://github.com/elastic/docs-projects/pull/464

* add release notes config from @KOTungseth

* Revert "add release notes config from @KOTungseth"

This reverts commit 417f7af53a14c57d3e7363d1e67cc9ca7f3b9dd2.

* net -> dotnet

* update navigation.yml and assembler.yml

* clean up

* more clean up

* Refactor navigation handling and introduce phantom support

Simplified navigation logic by restructuring method signatures and refining table of contents processing. Added support for phantom definitions in navigation files, ensuring appropriate handling of unlinked TOC folders. Refactored related classes to align with the new navigation paradigm.

---------

Co-authored-by: Martijn Laarman <Mpdreamz@gmail.com>

--- a/src/docs-assembler/assembler.yml
+++ b/src/docs-assembler/assembler.yml
@@ -34,12 +34,12 @@ references:
   cloud-on-k8s:
   cloud:
     current: master
-  curator:
-    skip: true
-    current: master
-  ecctl:
-    current: master
-    skip: true
+  # curator:
+  #   skip: true
+  #   current: master
+  # ecctl:
+  #   current: master
+  #   skip: true
   ecs-dotnet:
   ecs-logging-go-logrus:
   ecs-logging-go-zap:
@@ -60,18 +60,18 @@ references:
   elasticsearch-php:
   elasticsearch-py:
     # https://github.com/elastic/elasticsearch-rs ci checks not running?
-  elasticsearch-rs:
-    skip: true
+  # elasticsearch-rs:
+  #   skip: true
   elasticsearch-ruby:
   elasticsearch:
   go-elasticsearch:
   integrations:
   kibana:
-  logstash-docs:
+  logstash-docs-md:
     skip: true
   logstash:
   search-ui:
   integration-docs:
-  security-docs:
-    # wait for move to https://github.com/elastic/detection-rules/pull/4507/files
-    skip: true
+  # security-docs:
+  #   # wait for move to https://github.com/elastic/detection-rules/pull/4507/files
+  #   skip: true
