Add Lambda build and release jobs to CI workflows (#840)
* Add Lambda build and release jobs to CI workflows

This commit introduces a new `build-lambda` job in the PR workflow and a `release-lambda` job in the release workflow. These jobs handle building the Amazon Linux 2023 container, extracting the bootstrap binary, and preparing artifacts for distribution. A placeholder step to publish to AWS is included in the release workflow.

* checkout before docker build

* Update Dockerfile to correct publish path

Fixed the path in the `dotnet publish` command to ensure the correct directory is targeted. This resolves potential build issues caused by the incorrect source path.

* move away from fish syntax to bash

* update release flow as well

* call stat on expected output bootstrap file

* tree .artifacts

* update output paths

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,23 @@ jobs:
       - name: Publish Containers
         run: ./build.sh publishcontainers
 
+  release-lambda:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Amazon Linux 2023 build
+        run: |
+          docker build . -t publish-links-index:latest -f src/infra/docs-lambda-index-publisher/lambda.DockerFile
+      - name: Get bootstrap binary
+        run: |
+          docker cp $(docker create --name tc publish-links-index:latest):/app/.artifacts/publish ./.artifacts && docker rm tc
+
+      # TODO publish to AWS
+      - name: Attach Distribution to release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload ${{ github.ref_name }} .artifacts/docs-lambda-index-publisher/release_linux-x64/bootstrap
+        shell: bash
+
   release:
     needs: [containers]
     strategy:
