Update `navigation.yml` (#845)
* add curator, ecctl, logstash-docs-md

* draft edits to navigation.yml

* fix broken links

* update phantoms 👻

--- a/src/docs-assembler/assembler.yml
+++ b/src/docs-assembler/assembler.yml
@@ -41,12 +41,10 @@ references:
   cloud-on-k8s:
   cloud:
     current: master
-  # curator:
-  #   skip: true
-  #   current: master
-  # ecctl:
-  #   current: master
-  #   skip: true
+  curator:
+    current: master
+  ecctl:
+    current: master
   ecs-dotnet:
   ecs-logging-go-logrus:
   ecs-logging-go-zap:
@@ -75,7 +73,6 @@ references:
   integrations:
   kibana:
   logstash-docs-md:
-    skip: true
   logstash:
   search-ui:
   integration-docs:
