--- a/src/Elastic.Markdown/package.json
+++ b/src/Elastic.Markdown/package.json
@@ -6,7 +6,8 @@
   "source": "Assets/index.js",
   "scripts": {
     "watch": "parcel watch",
-    "build": "parcel build"
+    "build": "parcel build",
+    "lint": "eslint ."
   },
   "targets": {
     "js": {
@@ -24,11 +25,15 @@
   },
   "private": true,
   "devDependencies": {
+    "@eslint/js": "9.23.0",
     "@parcel/reporter-bundle-analyzer": "^2.14.2",
     "@tailwindcss/postcss": "^4.0.3",
+    "eslint": "9.23.0",
+    "globals": "16.0.0",
     "parcel": "2.14.2",
     "postcss": "^8.5.1",
-    "postcss-import": "^16.1.0"
+    "postcss-import": "^16.1.0",
+    "typescript-eslint": "8.28.0"
   },
   "browserslist": [
     "defaults"
