--- a/src/Elastic.Markdown/package.json
+++ b/src/Elastic.Markdown/package.json
@@ -25,29 +25,26 @@
   },
   "private": true,
   "devDependencies": {
+    "@tailwindcss/postcss": "4.0.3",
     "@eslint/js": "9.23.0",
-    "@parcel/reporter-bundle-analyzer": "^2.14.2",
-    "@tailwindcss/postcss": "^4.0.3",
     "eslint": "9.23.0",
     "globals": "16.0.0",
     "parcel": "2.14.2",
-    "postcss": "^8.5.1",
-    "postcss-import": "^16.1.0",
+    "postcss": "8.5.1",
+    "postcss-import": "16.1.0",
     "typescript-eslint": "8.28.0"
   },
   "browserslist": [
     "defaults"
   ],
   "dependencies": {
-    "clipboard": "^2.0.11",
-    "highlight.js": "^11.11.1",
-    "htmx-ext-head-support": "^2.0.4",
-    "htmx-ext-preload": "^2.1.1",
-    "htmx.org": "^2.0.4",
-    "install": "^0.13.0",
-    "npm": "^11.1.0",
-    "select-dom": "^9.3.0",
-    "tailwindcss": "^4.0.3",
-    "ua-parser-js": "^2.0.2"
+    "clipboard": "2.0.11",
+    "highlight.js": "11.11.1",
+    "htmx-ext-head-support": "2.0.4",
+    "htmx-ext-preload": "2.1.1",
+    "htmx.org": "2.0.4",
+    "select-dom": "9.3.0",
+    "tailwindcss": "4.0.3",
+    "ua-parser-js": "2.0.2"
   }
 }
