--- a/src/Elastic.Markdown/Elastic.Markdown.csproj
+++ b/src/Elastic.Markdown/Elastic.Markdown.csproj
@@ -51,19 +51,18 @@
   </Target>
 
   <ItemGroup>
-    <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-    <PackageReference Include="Samboy063.Tomlet" Version="6.0.0" />
-    <PackageReference Include="SoftCircuits.IniFileParser" Version="2.7.0" />
-    <PackageReference Include="Markdig" Version="0.40.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
-    <PackageReference Include="RazorSlices" Version="0.9.1" />
-    <PackageReference Include="Slugify.Core" Version="4.0.1" />
-    <PackageReference Include="Utf8StreamReader" Version="1.3.2"/>
-    <PackageReference Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.1.3" PrivateAssets="All"/>
-    <PackageReference Include="YamlDotNet" Version="16.3.0" />
-    <PackageReference Include="System.IO.Abstractions" Version="21.0.29" />
-    <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta12"
-                      PrivateAssets="all" ExcludeAssets="runtime" />
+    <PackageReference Include="DotNet.Glob" />
+    <PackageReference Include="Samboy063.Tomlet" />
+    <PackageReference Include="SoftCircuits.IniFileParser" />
+    <PackageReference Include="Markdig" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="RazorSlices" />
+    <PackageReference Include="Slugify.Core" />
+    <PackageReference Include="Utf8StreamReader" />
+    <PackageReference Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" />
+    <PackageReference Include="YamlDotNet" />
+    <PackageReference Include="System.IO.Abstractions" />
+    <PackageReference Include="NetEscapades.EnumGenerators" />
   </ItemGroup>
 
 </Project>
