--- a/tests/authoring/authoring.fsproj
+++ b/tests/authoring/authoring.fsproj
@@ -12,18 +12,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
-    <PackageReference Include="xunit.v3" Version="1.1.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2"/>
-    <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit.v3" />
+    <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="GitHubActionsTestLogger" />
 
-    <PackageReference Include="coverlet.collector" Version="6.0.4"/>
-    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="21.0.29"/>
-    <PackageReference Include="FsUnit.xUnit" Version="7.0.1"/>
-    <PackageReference Include="AngleSharp.Diffing" Version="1.0.0"/>
-    <PackageReference Include="DiffPlex" Version="1.7.2"/>
-    <PackageReference Include="Unquote" Version="7.0.1"/>
+    <PackageReference Include="JetBrains.Annotations" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" />
+    <PackageReference Include="FsUnit.xUnit" />
+    <PackageReference Include="AngleSharp.Diffing" />
+    <PackageReference Include="DiffPlex" />
+    <PackageReference Include="Unquote" />
+    <PackageReference Include="FSharp.Core" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,36 +39,21 @@
     <Compile Include="Framework\ErrorCollectorAssertions.fs"/>
     <Compile Include="Framework\MarkdownDocumentAssertions.fs"/>
     <Compile Include="Inline\Substitutions.fs"/>
-  </ItemGroup>
-
-  <ItemGroup>
+    <Compile Include="Inline\InlineAnchors.fs"/>
     <Compile Include="Inline\Comments.fs"/>
     <Compile Include="Inline\AppliesToRole.fs" />
     <Compile Include="Inline\InlineAppliesTo.fs" />
-    <Compile Include="Inline\InlineAnchors.fs"/>
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="Inline\InlineLinks.fs" />
     <Compile Include="Inline\CrossLinks.fs" />
     <Compile Include="Inline\CrossLinksRedirects.fs" />
     <Compile Include="Inline\RelativeLinks.fs" />
     <Compile Include="Container\DefinitionLists.fs"/>
     <Compile Include="Generator\LinkReferenceFile.fs"/>
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="Blocks\CodeBlocks\CodeBlocks.fs"/>
     <Compile Include="Blocks\Lists.fs"/>
     <Compile Include="Blocks\Admonitions.fs"/>
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="Applicability\AppliesToFrontMatter.fs" />
     <Compile Include="Applicability\AppliesToDirective.fs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="Directives\IncludeBlocks.fs" />
   </ItemGroup>
 
