Don't follow symlinks while s3 sync (#1050)
* Don't follow symlinks while s3 sync

* Move opt to end

--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -171,7 +171,7 @@ jobs:
         id: s3-upload
         if: ${{ !cancelled() && steps.docs-build.outputs.skip != 'true' && steps.deployment.outputs.result }}
         run: |
-          aws s3 sync .artifacts/docs/html "s3://elastic-docs-v3-website-preview${PATH_PREFIX}" --delete
+          aws s3 sync .artifacts/docs/html "s3://elastic-docs-v3-website-preview${PATH_PREFIX}" --delete --no-follow-symlinks
           aws cloudfront create-invalidation \
             --distribution-id EKT7LT5PM8RKS \
             --paths "${PATH_PREFIX}" "${PATH_PREFIX}/*"
