Add artifact attestation (#1136)
* Add artifact attestation

* Fix subject-path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 permissions:
   contents: read
   packages: write
+  attestations: write
 
 jobs:
   containers:
@@ -76,6 +77,13 @@ jobs:
       - name: Publish Binaries
         run: ./build.sh publishzip
         shell: bash
+        
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-path: |
+            .artifacts/publish/docs-builder/release/*.zip
+            .artifacts/publish/docs-assembler/release/*.zip
 
       - name: Attach Distribution to release
         env:
