--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,12 +8,14 @@
   </ItemGroup>
   <!-- AWS -->
   <ItemGroup>
-    <PackageVersion Include="Amazon.Lambda.RuntimeSupport" Version="1.13.0"/>
-    <PackageVersion Include="Amazon.Lambda.Core" Version="2.5.1"/>
-    <PackageVersion Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4"/>
+    <PackageVersion Include="Amazon.Lambda.RuntimeSupport" Version="1.13.0" />
+    <PackageVersion Include="Amazon.Lambda.Core" Version="2.5.1" />
+    <PackageVersion Include="Amazon.Lambda.S3Events" Version="3.1.0" />
+    <PackageVersion Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
+    <PackageVersion Include="Amazon.Lambda.SQSEvents" Version="2.2.0" />
+    <PackageVersion Include="AWSSDK.SQS" Version="3.7.400.135" />
     <PackageVersion Include="AWSSDK.S3" Version="3.7.416.16"/>
   </ItemGroup>
-
   <!-- Build -->
   <ItemGroup>
     <PackageVersion Include="Argu" Version="6.2.5" />
@@ -23,17 +25,16 @@
     <PackageVersion Include="Fake.IO.Zip" Version="6.1.3" />
     <PackageVersion Include="FSharp.Core" Version="9.0.202" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageVersion Include="ConsoleAppFramework" Version="5.4.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"/>
+    <PackageVersion Include="ConsoleAppFramework" Version="5.4.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageVersion Include="ConsoleAppFramework.Abstractions" Version="5.4.1" />
-    <PackageVersion Include="Crayon" Version="2.0.69"/>
+    <PackageVersion Include="Crayon" Version="2.0.69" />
     <PackageVersion Include="DotNet.Glob" Version="3.1.3" />
     <PackageVersion Include="Errata" Version="0.14.0" />
     <PackageVersion Include="Github.Actions.Core" Version="9.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
     <PackageVersion Include="Markdig" Version="0.41.1" />
-    <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.4"/>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.4"/>
     <PackageVersion Include="NetEscapades.EnumGenerators" Version="1.0.0-beta12" PrivateAssets="all" ExcludeAssets="runtime" />
     <PackageVersion Include="Proc" Version="0.9.1" />
     <PackageVersion Include="RazorSlices" Version="0.8.1" />
@@ -41,24 +42,23 @@
     <PackageVersion Include="Slugify.Core" Version="4.0.1" />
     <PackageVersion Include="SoftCircuits.IniFileParser" Version="2.7.0" />
     <PackageVersion Include="System.IO.Abstractions" Version="21.0.29" />
-    <PackageVersion Include="Utf8StreamReader" Version="1.3.2"/>
-    <PackageVersion Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.1.3" PrivateAssets="All"/>
+    <PackageVersion Include="Utf8StreamReader" Version="1.3.2" />
+    <PackageVersion Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.1.3" PrivateAssets="All" />
     <PackageVersion Include="Westwind.AspNetCore.LiveReload" Version="0.5.2" />
     <PackageVersion Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
-
   <!-- Test packages -->
   <ItemGroup>
-    <PackageVersion Include="AngleSharp.Diffing" Version="1.0.0"/>
-    <PackageVersion Include="DiffPlex" Version="1.7.2"/>
-    <PackageVersion Include="FluentAssertions" Version="6.12.1"/>
-    <PackageVersion Include="FsUnit.xUnit" Version="7.0.1"/>
+    <PackageVersion Include="AngleSharp.Diffing" Version="1.0.0" />
+    <PackageVersion Include="DiffPlex" Version="1.7.2" />
+    <PackageVersion Include="FluentAssertions" Version="6.12.1" />
+    <PackageVersion Include="FsUnit.xUnit" Version="7.0.1" />
     <PackageVersion Include="GitHubActionsTestLogger" Version="2.4.1" />
     <PackageVersion Include="JetBrains.Annotations" Version="2024.3.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
-    <PackageVersion Include="System.IO.Abstractions.TestingHelpers" Version="21.0.29"/>
-    <PackageVersion Include="Unquote" Version="7.0.1"/>
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2"/>
-    <PackageVersion Include="xunit.v3" Version="1.1.0"/>
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageVersion Include="System.IO.Abstractions.TestingHelpers" Version="21.0.29" />
+    <PackageVersion Include="Unquote" Version="7.0.1" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
+    <PackageVersion Include="xunit.v3" Version="1.1.0" />
   </ItemGroup>
 </Project>
