Fix release workflow permissions (#1178)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,6 +140,8 @@ jobs:
       - release-lambda
       - release-drafter
     runs-on: ubuntu-latest
+    permissions: 
+      contents: write
     steps:
       - name: Publish release
         env:
