--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,8 +13,9 @@
     <PackageVersion Include="Amazon.Lambda.S3Events" Version="3.1.0" />
     <PackageVersion Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
     <PackageVersion Include="Amazon.Lambda.SQSEvents" Version="2.2.0" />
-    <PackageVersion Include="AWSSDK.SQS" Version="3.7.400.135" />
-    <PackageVersion Include="AWSSDK.S3" Version="3.7.416.16"/>
+    <PackageVersion Include="AWSSDK.Core" Version="4.0.0.2" />
+    <PackageVersion Include="AWSSDK.SQS" Version="4.0.0.1" />
+    <PackageVersion Include="AWSSDK.S3" Version="4.0.0.1"/>
   </ItemGroup>
   <!-- Build -->
   <ItemGroup>
