Add link-index-updater lambda build job (#1217)
* Add link-index-updater lambda build job

And reuse it in the release workflow

* Also re-use in PR

* Fix

* Decrease retention

* Refactor

* Remove `_modified` and check

It's not concurrency safe and doesn't work as expected. It's not worth the hassle

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,18 +27,8 @@ jobs:
         run: dotnet run --project src/tooling/docs-assembler -c release -- navigation validate
 
   build-lambda:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Amazon Linux 2023 build
-        run: |
-          docker build . -t publish-links-index:latest -f src/infra/docs-lambda-index-publisher/lambda.DockerFile
-      - name: Get bootstrap binary
-        run: |
-          docker cp $(docker create --name tc publish-links-index:latest):/app/.artifacts/publish ./.artifacts && docker rm tc
-          tree .artifacts
-          stat .artifacts/docs-lambda-index-publisher/release_linux-x64/bootstrap
-          
+    uses: ./.github/workflows/build-link-index-updater-lambda.yml
+
   lint:
     runs-on: ubuntu-latest
     defaults: 
