--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,8 @@ jobs:
             })
   
   containers:
+    needs: 
+      - release-drafter
     runs-on: ubuntu-latest
     outputs:
       full-version: ${{ steps.bootstrap.outputs.full-version }}
@@ -52,7 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ steps.release-drafter.outputs.tag_name }}
+          ref: ${{ needs.release-drafter.outputs.tag_name }}
       - name: Bootstrap Action Workspace
         id: bootstrap
         uses: ./.github/actions/bootstrap
@@ -65,13 +67,21 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish Containers
-        run: ./build.sh publishcontainers
+        run: ./build.sh publishcontainers\
+        
+  build-lambda:
+    needs: 
+      - release-drafter
+    uses: ./.github/workflows/build-link-index-updater-lambda.yml
+    with:
+      ref: ${{ needs.release-drafter.outputs.tag_name }}
 
   release-lambda:
     environment: 
       name: link-index-updater-prod
     runs-on: ubuntu-latest
     needs:
+      - build-lambda
       - release-drafter
     permissions:
       contents: write
@@ -79,24 +89,22 @@ jobs:
     env: 
       ZIP_FILE: link-index-updater-lambda.zip
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ steps.release-drafter.outputs.tag_name }}
-      - name: Amazon Linux 2023 build
+
+      - uses: actions/download-artifact@v4
+        with: 
+          artifact-ids: ${{ needs.build-lambda.outputs.artifact-id }}
+
+      - name: Create zip
         run: |
-          docker build . -t publish-links-index:latest -f src/infra/docs-lambda-index-publisher/lambda.DockerFile
-      - name: Get bootstrap binary
-        run: |
-          docker cp $(docker create --name tc publish-links-index:latest):/app/.artifacts/publish ./.artifacts && docker rm tc
-      
+          zip -j "${ZIP_FILE}" ./bootstrap
+
       - uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722 # v4.1.0
         with:
           role-to-assume: arn:aws:iam::197730964718:role/elastic-docs-v3-link-index-updater-deployer
           aws-region: us-east-2
-          
+      
       - name: Upload Lambda function
-        run: |        
-          zip -j "${ZIP_FILE}" .artifacts/docs-lambda-index-publisher/release_linux-x64/bootstrap
+        run: |
           aws lambda update-function-code \
             --function-name elastic-docs-v3-link-index-updater \
             --zip-file "fileb://${ZIP_FILE}"
@@ -104,7 +112,7 @@ jobs:
       - name: Attach Distribution to release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release-drafter.outputs.tag_name }} "${ZIP_FILE}"
+        run: gh release upload --repo ${{ github.repository }} ${{ needs.release-drafter.outputs.tag_name }} "${ZIP_FILE}"
 
   release:
     needs: 
@@ -126,7 +134,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ steps.release-drafter.outputs.tag_name }}
+          ref: ${{ needs.release-drafter.outputs.tag_name }}
 
       - name: Bootstrap Action Workspace
         id: bootstrap
