Add a new job to handle push event matching (#1279)
* Add a new job to handle push event matching

Introduce a "match" job to process push event-specific logic and outputs, ensuring proper handling of event types. This includes conditional steps for different event contexts and prepares outputs for downstream "build" job dependencies.

* revert assembler.yml

* PR feedback

* add pr target temporarily

* remove type filters

* Remove pull request target

* fix duplicate id

* fix env vars

* reverse checks to see the other path

* update variable

* update variable

* debug

* temporarily add docs-builder to assembler

* cleanup

* Add docs-builder as skipped reference so it publishes from 'main'

* move back to pull_request_target

--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -10,6 +10,13 @@ on:
     branches:
       - main
       - master
+      # TODO remove these need to be added to individual repositories
+      - '\d+.\d+.\d+'
+      - '\d+.\d+'
+      - '\d+.x'
+    tags:
+      - 'v?\d+.\d+.\d+'
+      - 'v?\d+.\d+'
   workflow_call:
     inputs:
       strict:
@@ -44,6 +51,39 @@ permissions:
   pull-requests: read
 
 jobs:
+  match:
+    if: github.event.repository.fork == false # Skip running the job on the fork itself (It still runs on PRs on the upstream from forks)
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.event.pull_request.head.ref || github.ref }}
+      cancel-in-progress: ${{ startsWith(github.event_name, 'pull_request') }}
+    runs-on: ubuntu-latest
+    outputs:
+      content-source-match: ${{ steps.event-check.outputs.content-source-match != '' && steps.event-check.outputs.content-source-match || steps.match.outputs.content-source-match }}
+      content-source-name: ${{ steps.event-check.outputs.content-source-name != '' && steps.event-check.outputs.content-source-name || steps.match.outputs.content-source-name }}
+    steps:
+      - name: Not a push event
+        id: event-check
+        if: contains(fromJSON('["merge_group", "pull_request", "pull_request_target"]'), github.event_name)
+        # ensure we emit static output to simplify our checks in the build step
+        run: |
+          echo "content-source-match=true" >> $GITHUB_OUTPUT
+          echo "content-source-name=next" >> $GITHUB_OUTPUT
+      - name: Match for push events
+        id: match
+        if: contains(fromJSON('["push"]'), github.event_name)
+        uses: elastic/docs-builder/actions/assembler-match@main
+        with:
+          ref_name: ${{ github.ref_name }}
+          repository: ${{ github.repository }}
+      - name: Debug
+        if: contains(fromJSON('["merge_group", "pull_request", "pull_request_target"]'), github.event_name)
+        run: |
+          echo "Non sensitive data, echo'ing here temporarily to validate this job before connecting it further into the build job"
+          echo "content-source-match=${{ steps.event-check.outputs.content-source-match != '' && steps.event-check.outputs.content-source-match || steps.match.outputs.content-source-match }}"
+          echo "content-source-name=${{ steps.event-check.outputs.content-source-name != '' && steps.event-check.outputs.content-source-name || steps.match.outputs.content-source-name }}"
+          echo "ref=${{ github.ref_name }}"
+          echo "repo=${{ github.repository }}"
+
   build:
     if: github.event.repository.fork == false # Skip running the job on the fork itself (It still runs on PRs on the upstream from forks)
     concurrency:
@@ -52,6 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PR_REF_NAME: ${{ github.event.pull_request.head.ref }}
+    needs: [ match ]
     steps:
 
       - name: Checkout
